Update mobile overflow card component issue

--- a/budgetly/src/Components/UI/CardComponents/Card.module.css
+++ b/budgetly/src/Components/UI/CardComponents/Card.module.css
@@ -30,7 +30,7 @@
     .card {
         grid-template-columns: 1fr;
         height: 100vh;
-: auto;
+	overflow: auto;
     }
      
 }
